--- a/data/player-ship.yaml
+++ b/data/player-ship.yaml
@@ -1,7 +1,11 @@
-geometry:
-  hull: player.hull.obj
+traits:
+  fuel: 100
+  cam_spring: 10
+  cam_y: 0
+  thrust_per_fuel: 1
+  cam_x: 0
+  cam_z: 2
 textures:
   diffuse: player.diffuse.png
-traits:
-  thrust_per_fuel: 1
-  fuel: 100
+geometry:
+  hull: player.hull.obj
